--- a/src/tobeto2A.RentACar/Application/Features/Auth/Resources/Locales/auth.tr.yaml
+++ b/src/tobeto2A.RentACar/Application/Features/Auth/Resources/Locales/auth.tr.yaml
@@ -8,3 +8,4 @@ RefreshDontExists: "Yenileme bulunmuyor."
 InvalidRefreshToken: "Geçersiz yenileme token'ı."
 UserMailAlreadyExists: "Kullanıcı e-postası zaten mevcut."
 PasswordDontMatch: "Parola eşleşmiyor."
+EmailFormatError: "E-posta formatı geçersiz."
