--- a/src/tobeto2A.RentACar/Application/Features/Auth/Resources/Locales/auth.en.yaml
+++ b/src/tobeto2A.RentACar/Application/Features/Auth/Resources/Locales/auth.en.yaml
@@ -8,3 +8,4 @@ RefreshDontExists: "Refresh don't exists."
 InvalidRefreshToken: "Invalid refresh token."
 UserMailAlreadyExists: "User mail already exists."
 PasswordDontMatch: "Password don't match."
+EmailFormatError: "Email format is not correct."
